* Aug 15 2001 hship

Release 1.0.4

Don't attempt to package PDF files (which have been removed).

web:
- Fix bad link in ex_demo.html

* Aug 15 2001 hship

framework:
- Slight change to the rules involving whitespace in an HTML template.
- Change MapHelper to use a cache of MapAccessor instances.
- Update the Tapestry DTD to allow the <bean> element, and otherwise
  add support for helper beans (including pooling of helper beans)
- Add the IPoolable interface (an optional interface for objects
  that can be stored in pools).

vlibbeans:
- Change the default mail configuration.

vlib:
- Integrate latest HTML and images.

web:
- Apply the Primix branding to the static portion of the web site.

tutorial:
- Fix an error in the Stocks porlet of the Portal demo

Prepare for release 1.0.4

* Aug 8 2001 hship

Release 1.0.3

* Aug 8 2001 hship

Update Jetty to 3.1RC6
Update Log4j to 1.1.3
Prepare for Release 1.0.3

* Aug 7 2001 hship

JBE:
- Update to DocBook XSL 1.42

doc:
- remove hardcoded pathname from common/Tapestry.xsl

contrib:
- remove mirror parameter from Palette

framework:
- Make it possible to use relative URLs; completely revise how services
  construct URLs to use query parameters instead of extra path info
- change IEngineService to build Gestures, not URLs
- change Form component to encode query parameters for Gesture as hidden fields

vlib:
- Rework external service around Gestures

[ #448475 ] Relative URLs to resources


* Aug 3 2001 hship

JBE:
- Only use -classic option under Cygwin
- Fix DocBook to work with replacement HTML templates

doc:
- Use Tapestry.xsl template, which restores grey background for programlisting, etc. 
- Update JBE documentation to describe how to use HTML Stylesheet with DocBook

contrib:
- Provide final version of move_up.gif for Palette component

vlib/vlibbeans:
- Add support for the admin.EditUsers page

[ #446951 ] JBE on Solaris

* Aug 2 2001 hship

doc: